# ggplotly

./: .gitignore  AESTHETIC_REFACTORING.md  CHANGELOG.md  CLAUDE.md  Examples.ipynb  GGPLOT2_COMPATIBILITY_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  LOESS_IMPLEMENTATION.md  README.md  ROADMAP.md  SMOOTHING_METHODS.md  TODO.md  mkdocs.yml  prices.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_1stdev_band.py  test_hat_values.py  test_new_loess.py  test_smooth_span_twothirds.py  test_smooth_values.py  view_all.ipynb
.devcontainer/: devcontainer.json
docs/: getting-started.ipynb  getting-started.md  index.ipynb  index.md
edgebundleexample/: EARLY_FILTERING_RESULTS.md  FINAL_VECTORIZATION_RESULTS.md  PYTHON_README.md  VECTORIZATION_RESULTS.md  VISIBILITY_ANALYSIS.md  edge_bundle.py  edge_bundling_demo.ipynb  example_usage.py  test_additional_vectorizations.py  test_early_filtering.py  test_edge_bundle.py  test_validation.py  test_vectorization.py  us_flights_edges.csv  us_flights_example.py  us_flights_nodes.csv  vectorization_analysis.md
examples/: EdgeBundling.ipynb  EdgeBundling.py  Examples.ipynb  Examples.py  aesthetic_mapper_demo.py  bundling_comparison.py  circular_demo.py  complex_network_demo.py  complex_plot.html  coord_flip.html  edge.ipynb  edge.py  four.ipynb  four.py  geom_candlestick_examples.py  geom_edgebundle_examples.py  geom_sf_coord_sf_examples.py  geom_surface_examples.py  ggplotly_master_examples.ipynb  ggplotly_master_examples.py  ggplotly_showcase.py  igraph_example.py  maps.ipynb  maps.py  migration_network.py  oil_shipping_network.py  path_examples.py  plot.html  plot_extended.html  prices.ipynb  prices.py  range_plot_example.py  searoute_example.py  session_changes.ipynb  session_changes.py  test_bundling_strength.py  test_compatibility_stats.py  test_component_clamping.py  test_confidence_band.py  test_edgebundle.py  (+9 more)
ggplotly/: __init__.py  aes.py  aesthetic_mapper.py  constants.py  data_utils.py  datasets.py  exceptions.py  facets.py  ggplot.py  ggtitle.py  guides.py  layer.py  limits.py  map_data.py  positions.py  themes.py  trace_builders.py  utils.py
notebooks/: EdgeBundling.ipynb  Examples.ipynb  four.ipynb  geom_edgebundle_examples.py  geom_point_3d_examples.py  geom_sf_coord_sf_examples.py  maps.ipynb  threeD.ipynb  view_all.ipynb
notes/: EDGE_BUNDLING.md
pytest/: README.md  TEST_COVERAGE.md  conftest.py  requirements-test.txt  run_tests.py  test_annotate.py  test_ben.py  test_coord_sf.py  test_data.py  test_datasets.py  test_error_handling.py  test_facets.py  test_facets_stats_utils.py  test_geom_acf.py  test_geom_candlestick.py  test_geom_candlestick_examples.py  test_geom_edgebundle.py  test_geom_fanchart.py  test_geom_lines.py  test_geom_map.py  test_geom_norm.py  test_geom_pacf.py  test_geom_point_3d.py  test_geom_qq.py  test_geom_range.py  test_geom_rect_label.py  test_geom_sankey.py  test_geom_stl.py  test_geom_surface.py  test_geom_surface_examples.py  test_geom_waterfall.py  test_geoms.py  test_index_handling.py  test_integration.py  test_layer.py  test_main.py  test_maps.py  test_new_parameters.py  test_notebooks.py  (+14 more)
(+143 files in other folders)
